--- a/14. 파일.md
+++ b/14. 파일.md
@@ -107,7 +107,227 @@ print(text)
 
 `shutil.copy(a,b)` :a파일을 b로 복사 
 
+>def mycopy(file1, file2):
+>
+>- 파일(live.txt)을 연다(read용)   
+>- 파일(live2.txt)을 연다(write용)
+>
+>- live.txt.을 읽어 오기(메모리)
+>- live.txt(w)  준비 (메모리)
+>- 한 단어 한 단어를 하나씩 read, write 반복 
+>- 조건을 써서 EOF까지 반복 진행
+>- 파일(live.txt, live2.txt) 닫아준다.(close)
+
+
+
 `sutil.chown`: 권한 줄때 사용
+
+
+
+### 디렉토리 관리 함수
+
+os.chdir : 현재 디렉토리 변경
+
+os.mkdir : 디렉토리 생성
+
+os.rmdir : 디렉토리 제거 
+
+os.listdir : 리스트 확인 
+
+> import os
+>
+> files = os.listdir("c:\\Users\\hansoo")
+> for f in files:
+>     print(f)
+
+
+
+디렉토리 확인 재귀함수
+
+```python
+import os
+
+def dumpdir(path):
+    files = os.listdir(path)
+    for f in files:
+        fullpath = path + "\\" + f
+        if os.path.isdir(fullpath):
+            print("[" + fullpath +"]")
+            dumpdir(fullpath)
+        else:
+            print("\t" + fullpath)
+            
+dumpdir("C:\\Users\\hansoo")
+```
+
+
+
+### 파일 관리 유틸리티 
+
+```python
+import os
+
+path = "c:\\Users\\hansoo"
+files = os.listdir(path)   #디렉토리 나열
+for f in files:
+    if (f.find("-") and f.endswith(".mp3")): # -,.mp3로 끝나는 파일 찾기 
+        name = f[0:-4]   # 확장자 제외 이름 추출 
+        ext = f[-4:]   # 확장자 추출
+        part = name.split("-")   # - 양쪽 분리
+        newname = part[1].strip() + "-" + part[0].strip() + ext 
+        # 순서 바꾼후 - 달고 확장자 달기
+        print(newname)
+        os.rename(path + "\\" + f, path + "\\" + newname)
+```
+
+
+
+## 데이터베이스(DB)
+
+### SQlite
+
+![image-20210113133117697](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210113133117697.png)
+
+
+
+import pymysql
+
+import pyymongo
+
+import cx_Oracle
+
+import pymmssql
+
+
+
+pip install pymysql
+
+
+
+DDL 과 DML 
+
+- delete는 data 만 지우는거
+
+- drop은 table 자체를 지우는거 
+
+
+
+### 조회
+
+```python
+import sqlite3
+
+con = sqlite3.connect('addr.db')
+cursor = con.cursor()
+
+cursor.execute("DROP TABLE IF EXISTS tblAddr")
+cursor.execute("""CREATE TABLE tblAddr
+    (name CHAR(16) PRIMARY KEY, phone CHAR(16), addr TEXT)""")
+
+cursor.execute("INSERT INTO tblAddr VALUES ('김상형', '123-4567', '오산')")
+cursor.execute("INSERT INTO tblAddr VALUES ('한경은', '555-1004', '수원')")
+cursor.execute("INSERT INTO tblAddr VALUES ('한주완', '444-1092', '대전')")
+
+con.commit()
+
+cursor.close()
+con.close()
+```
+
+prompt에서 확인 가능
+
+![image-20210113143629618](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210113143629618.png)
+
+`fetchall : 모든 레코드를 한꺼번에 읽음`
+
+```python
+import sqlite3
+
+con = sqlite3.connect('addr.db')
+cursor = con.cursor()
+
+cursor.execute("SELECT * FROM tblAddr")
+table = cursor.fetchall() #fetchone로도 try
+for record in table:
+    print("이름 : %s, 전화 : %s, 주소 : %s" % record)
+
+cursor.close()
+con.close()
+```
+
+
+
+`fetchone : 한 레코드씩 순서대로 읽음`
+
+```python
+import sqlite3
+
+con = sqlite3.connect('addr.db')
+cursor = con.cursor()
+
+cursor.execute("SELECT * FROM tblAddr ORDER BY addr")
+table = cursor.fetchall()
+for record in table:
+    print("이름 : %s, 전화 : %s, 주소 : %s" % record)
+
+cursor.close()
+con.close()
+```
+
+
+
+### 수정 및 삭제
+
+UPDATE 명령 
+
+- `WHERE` 절과 함께 사용 
+
+```python
+import sqlite3
+
+con = sqlite3.connect('addr.db')
+cursor = con.cursor()
+
+cursor.execute("UPDATE tblAddr SET addr = '제주도' WHERE name = '김상형'")
+con.commit()
+
+cursor.close()
+con.close()
+이름 : 김상형, 전화 : 123-4567, 주소 : 제주도
+이름 : 한경은, 전화 : 555-1004, 주소 : 수원
+이름 : 한주완, 전화 : 444-1092, 주소 : 대전
+```
+
+
+
+DELETE 명령
+
+```python
+import sqlite3
+
+con = sqlite3.connect('addr.db')
+cursor = con.cursor()
+
+cursor.execute("DELETE FROM tblAddr WHERE name = '김상형'")
+con.commit()
+
+cursor.close()
+con.close()
+
+첫째줄 삭제됨
+이름 : 한경은, 전화 : 555-1004, 주소 : 수원
+이름 : 한주완, 전화 : 444-1092, 주소 : 대전
+```
+
+
+
+
+
+
+
+
+
+
 
 
 
