--- a/15.클래스.md
+++ b/15.클래스.md
@@ -1,6 +1,6 @@
 ## 15.클래스
 
-### 객체지향언어
+### 객체지향언어(보통 대문자로 시작)
 
 ![image-20210113160735234](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210113160735234.png)
 
@@ -61,8 +61,8 @@ class Human:
 
     def intro(self):
         print(str(self.age) + "살 " + self.name + "입니다")
-        
-roh = Human(27,"노한수")
+        # 클래스 지정 
+roh = Human(27,"노한수")    #하나의 객체 = 인스턴스
 roh.intro()
 yang = Human(25,"양현지")
 yang.intro()
@@ -72,7 +72,7 @@ yang.intro()
 
 ### 상속
 
-- 기존 클래스 확장 
+- 기존 클래스 상속 받아서 다시 재정의한다.
 
 ```python
 class Student(Human):
@@ -82,14 +82,14 @@ class Student(Human):
 
     def intro(self):
         super().intro()
-        print("학번 : " + str(self.stunum))
+        print("학번 : " + str(self.stunum))   #재정의(override)
 ```
 
 ### 액세서 
 
 게터 메서드 : 멤버 값 대신 읽음
 
-세터 메서드
+세터 메서드 : 멤버 값 대신 변경
 
 ```python
 class Date:
@@ -125,6 +125,26 @@ today.month = 15
 print(today.month)
 ```
 
+get과 set으로만 변수 조정을 가능하게 할거야!
+
+```python
+class Date:
+    def __init__(self, month):
+        self.__month = month
+    def getmonth(self):
+        return self.__month
+    def setmonth(self, month):
+        if 1 <= month <= 12:
+            self.__month = month
+    month = property(getmonth, setmonth)
+
+today = Date(8)
+today.__month = 15   # 소용없는 짓 
+print(today.month)
+today.setmonth(11)
+print(today.month)
+```
+
 
 
 ### 클래스 메서드
@@ -153,21 +173,40 @@ Car.outcount()
 
 
 
-### 특수 메서드
+### 연산자 메서드
 
 ```python
 class Human:
     def __init__(self, age, name):
         self.age = age
         self.name = name
-    def __str__(self):
-        return "이름 %s, 나이 %d" % (self.name, self.age)
+    def __eq__(self, other):
+        return self.age == other.age and self.name == other.name
 
 kim = Human(29, "김상형")
-print(kim)
+sang = Human(29, "김상형")
+moon = Human(44, "문종민")
+print(kim == sang)
+print(kim == moon)
+kang = Human(29,"정우성")
+print(kim == kang)   # false
 ```
 
 
+
+
+
+
+
+### 특수 메서드
+
+- _ _ str_ _ 
+
+![image-20210114135045826](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210114135045826.png)
+
+- _ _ len_ _
+
+![image-20210114135335057](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210114135335057.png)
 
 ### Decimal
 
@@ -223,5 +262,11 @@ print(ar[2:4])                  	# 슬라이스
 
 ```
 
+![image-20210114093645554](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210114093645554.png)
 
+멤버 : 클래스 안에 있는 모든것
+
+변수멤버(속성), 함수멤버(동작, 기능)가 있는데 
+
+함수멤버는 메서드 
 
