--- a/16. 모듈과 패키지.md
+++ b/16. 모듈과 패키지.md
@@ -69,7 +69,7 @@ for k in solarterm:
 
 
 
-### 데코레이션
+### 데코레이터
 
 - 일급시민
   - 함수도 변수처럼 대입하고 할 수 있다. 
@@ -103,11 +103,90 @@ calc(multi,3,4)
 
 
 
+![image-20210115094550471](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115094550471.png)
+
+
+
+### 함수 데코레이터
+
+함수에 원하는 코드 추가하는 기법
+
+
+
+![image-20210115102742527](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115102742527.png)
+
+결과가 같다 
+
+함수 wrapper? 이름은 중요하지않다 
+
+이걸 return 받아서 클로저에 저장시킨 후 
+
+필요할 때 사용하고는 한다. 
+
+-----
+
+@div, @para를 통해 함수를 호출 시킨다. 
+
+알아보기 또한 편하다.
+
+![image-20210115102814846](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115102814846.png)
+
+### 클래스 데코레이터
+
+![image-20210115112243835](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115112243835.png)
+
+사실 클래스를 사용한다는 것 말고 지역함수랑 다른점을 잘 모르겠다.
+
+----
+
+데코레이터 사용시 
+
+![image-20210115112700945](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115112700945.png)
+
+-----
+
+![image-20210115112709319](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115112709319.png)
+
+<클래스 함수>		<클래스 데코레이터>	<함수 데코레이터>	<함수>
 
 
 
 
 
+### 동적코드실행
+
+- eval
+
+  (보안쪽에서는 안좋아하는?)
+
+  실시간으로 코드 만들어 실행
+
+  ![image-20210115113737117](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115113737117.png) 
+
+---
+
+- repr()
+
+  객체로부터 문자열로 표현식을 생성
+
+  str보다 사람이 보기 편리 
+
+  ![image-20210115114908010](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115114908010.png) 
+
+![image-20210115114842482](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115114842482.png)
 
 
 
+보이는가 repr과 str의 차이 
+
+![image-20210115131216054](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115131216054.png)
+
+### exec
+
+![image-20210115132748866](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115132748866.png)
+
+### compile
+
+
+
+![image-20210115133626558](C:\Users\hansoo\AppData\Roaming\Typora\typora-user-images\image-20210115133626558.png)
